--- a/doc/icewm.adoc
+++ b/doc/icewm.adoc
@@ -927,6 +927,10 @@ _Ignore_::: Don't add an icon to the tray pane.
 _Minimized_::: Add an icon the the tray. Remove the task pane button when minimized.
 _Exclusive_::: Add an icon the the tray. Never create a task pane button.
 
++order: 0+:: The sorting order of task buttons and tray icons.
+The default value is zero. Increasing positive values go farther right,
+while decreasing negative values go farther left.
+The order option applies to taskbar, tray and system tray.
 +allWorkspaces: 0+:: If set to 1, window will be visible on all workspaces.
 +appTakesFocus: 0+:: if set to 1, IceWM will assume the window supports the WM_TAKE_FOCUS protocol even if the window did not advertise that it does.
 +dBorder: 1+:: If set to 0, window will not have a border.
